2008-06-24  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #402379
	* expression.cs: Don't crash when an object initializer resolve fails.

2008-06-24  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #402888
	* expression.cs: Mutate conditional expression.

2008-06-24  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #401012
	* class.cs: Keep StructLayout in shared container.

2008-06-24  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #400438
	* decl.cs, class.cs: Only properties can be automatically implemented.

2008-06-24  Marek Safar  <marek.safar@gmail.com>

	* statement.cs (ChangeToIterator): Copy also labels.

2008-06-23  Marek Safar  <marek.safar@gmail.com>

	* ecore.cs: Pass type argument details to parent extension method.

2008-06-23  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #375966
	* delegate.cs: Fixed IsTypeCovariant generic type conversions.

2008-06-23  Raja R Harinath  <harinath@hurrynot.org>

	* Makefile (bootstrap-libs): Pass NO_DIR_CHECK to sub-make.

2008-06-22  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #394347
	* anonymous.cs: Cache compatible delegates as compatibility check produces
	a new method every time.

2008-06-20  Marek Safar  <marek.safar@gmail.com>

	* anonymous.cs: Propagate storey reference for single references.

2008-06-20  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #387615
	* assign.cs, expression.cs: Correctly clone compound assignment.

2008-06-19  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #359611, #359604
	* anonymous.cs: Mutate all types of hoisted parameters.

2008-06-19  Marek Safar  <marek.safar@gmail.com>

	* typemanager.cs, lambda.cs, parameter.cs, ecore.cs, linq.cs, class.cs
	delegate.cs, iterators.cs, cs-parser.jay, assign.cs, anonymous.cs, driver.cs
	expression.cs, codegen.cs, statement.cs
	
	Fixes bugs: #318652, #323223, #234779, #325069, #325476, #332532, #334465,
	#345907, #349190, #353276, #355256, #359617, #378542, #384584, #396530
	